fixed: image gap issue

--- a/style.css
+++ b/style.css
@@ -197,7 +197,7 @@ img {
 }
 
 .project-image {
-    aspect-ratio: 16/9;
+
     background-color: #e5e7eb;
     display: flex;
     align-items: center;
